--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,19 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
+  <script src="idb.js"></script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker.register("service-worker.js").then(reg => {
+          console.log("We found your service worker file!", reg);
+        }).catch(error => {
+          console.log("Failed to connect");
+          console.log(error);
+        })
+      });
+    }
+  </script>
+
 </body>
 </html>
